--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   type      : person # "person" (default), "organization"
   name      : Chambin Lee
   url       :
-  avatar    : .\assets\agen.png # path or url of avatar image (square)
+  avatar    : https://avatars.githubusercontent.com/u/35166345?s=400&u=3ec7e8a47bbbaddf2cefd7bc75df3a97da7776e2&v=4 # path or url of avatar image (square)
   bio       : I am an amazing person.
   email     :
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
@@ -49,7 +49,7 @@ author:
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
   linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
-  github    : https://github.com/ChambinLee # "user_name" the last part of your profile url, e.g. https://github.com/user_name
+  github    : ChambinLee # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
 
 
